# DMCCDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/dmccdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FRtpDecoder.cpp  FRtpDecoder.h  GLCoder.cpp  GLCoder.h  myrtspsenderv2.cpp  myrtspsenderv2.h  myvideodecoder.cpp  myvideodecoder.h  native-lib.cpp
app/src/main/java/com/example/dmccdemo/: DataInfo.java  InputFilterMinMax.java  MainActivity.java  MediaCodecSurfaceViews.java  OnDecodeListener.java  OnSupportListener.java  TestActivity.java  YuvPlayerView.java
app/src/main/java/com/example/dmccdemo/ijkplayer/: ProVideoActivity.java
app/src/main/java/com/example/dmccdemo/ijkplayer/views/: ProVideoView.java  VideoControllerView.java
app/src/main/res/drawable/: chuangkou.xml  gray_thumb.xml  gray_track.xml  green_thumb.xml  green_track.xml  jia.xml  jian.xml  thumb.xml  track.xml
app/src/main/res/layout/: activity_main.xml  activity_main_pro.xml  activity_test.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  style.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dmccdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-java/: build.gradle
ijkplayer-java/src/androidTest/java/com/example/ijkplayer_java/: ExampleInstrumentedTest.java
ijkplayer-java/src/main/java/tv/danmaku/ijk/media/widget/media/: IjkVideoView.java  SurfaceRenderView.java  TextureRenderView.java
ijkplayer-java/src/test/java/com/example/ijkplayer_java/: ExampleUnitTest.java
